Change class instantiation call